--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,9 @@
-name = "physics_meets_info_notebooks"
-uuid = "6cc58fc8-d93e-4607-8a35-36ca7359483d"
-authors = ["Markus <markus.schmitt@ur.de>"]
+name = "physics_meets_info"
+uuid = "0b4bfc71-e897-4abd-a493-cdb6874e1367"
+authors = ["Markus <markus.schmitt@uni-koeln.de>"]
 version = "0.1.0"
+
+[deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
